added functional 'Create New Page'

--- a/django/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/django/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -20,10 +20,10 @@
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
-                    Create New Page
+                    <a href="{% url 'new entry' %}">Create New Page</a>
                 </div>
                 <div>
-                    Random Page
+                    <a href=""> Random Page </a>
                 </div>
                 {% block nav %}
                 {% endblock %}
