--- a/django/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/django/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -23,7 +23,7 @@
                     <a href="{% url 'new entry' %}">Create New Page</a>
                 </div>
                 <div>
-                    <a href=""> Random Page </a>
+                    <a href="{% url 'random page' %}"> Random Page </a>
                 </div>
                 {% block nav %}
                 {% endblock %}
