--- a/django/wiki/encyclopedia/templates/encyclopedia/edit_page.html
+++ b/django/wiki/encyclopedia/templates/encyclopedia/edit_page.html
@@ -7,7 +7,9 @@
 {% block body %}
     <form action="{% url 'edit page' edit_title %}" method="POST">
         {% csrf_token %}
+        <label for="title">Title for wiki entry:</label>
         <input name="title" id="title" placeholder="{{ edit_title }}" value="{{ edit_title }}">
+        <label for="entry-content">Wiki content:</label>
         <textarea name="entry-content" id="entry-content">{{ edit_content }}</textarea>
         <input type="submit" value="save">
         </form> 
